chore: update swagger doc for post job
